# actigraph-eventmarker-data-extraction

./: .env.example  .gitignore  README.md  centrepoint-design-doc.md  pyproject.toml  requirements.txt  startup.sh  subjects.txt
.github/workflows/: deploy.yml
docs/: design-doc.md
scripts/: get_studies.py  get_subjects.py  verify_api.py
src/: app.py  auth.py  event_markers.py
src/api/: __init__.py  auth.py  event_markers.py  subjects.py
