[project]
name = "actigraph-eventmarker-data-extraction"
version = "0.1.0"
description = "A lightweight web tool for extracting Event Marker data from the ActiGraph CentrePoint 3 API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
]
